@@ -1,3 +1,8 @@
+2008-08-15  Neal H. Walfield  <neal@gnu.org>
+
+	* storage.c (storage_free_): Deallocate the folio before updating
+	the shadow capability.
+
 2008-08-12  Neal H. Walfield  <neal@gnu.org>
 
 	* storage.c (storage_low_mutex): Use
